# dark-fs

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
dark_fs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
darkfs/: cli.py  core.py  helpers.py  main.py
