[project]
name = "dark-fs"
version = "0.2.1"
description = "Dark-FS is a cross-platform CLI file manager with a colorful terminal interface and fast navigation."
authors = [{ name = "Mayank Sinha" }]
dependencies = ["pyfiglet", "colorama"]
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"

keywords = ["github", "cli", "file", "system", "os", "folder", "structure"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[project.scripts]
dfs = "darkfs.main:main"

[project.urls]
Homepage = "https://github.com/mayank-tech-official/dark-fs"

[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"
